--- a/scss/main.css
+++ b/scss/main.css
@@ -449,31 +449,73 @@ main .banner-section .banner .box {
   color: white;
   text-transform: uppercase;
 }
+main .banner-section .banner .box .desc {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(245, 222, 179, 0.7137254902);
+}
+main .banner-section .banner .box .desc h1 {
+  text-align: center;
+  color: black;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+main .banner-section .banner .box .desc h1 span {
+  font-weight: bold;
+  margin: 0 10px;
+}
 main .banner-section .banner .pic-1 {
   grid-row: 1/span 2;
   grid-column: 1/2;
   background-color: #555;
+  background: url("bg-imgs/banner-pic-1.gif");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 main .banner-section .banner .pic-2 {
   grid-row: 1/2;
   grid-column: 2/4;
-  background-color: #777;
+  background: url("bg-imgs/banner-pic-2.png");
+  background-position: 70%;
+  background-size: cover;
 }
-main .banner-section .banner .pic-3 {
+main .banner-section .banner .space {
   display: none;
 }
-main .banner-section .banner .pic-4 {
+main .banner-section .banner .inner-box {
   grid-row: 2/3;
   grid-column: 2/4;
   background-color: #bbb;
 }
-main .banner-section .banner .pic-4 .inner-box {
+main .banner-section .banner .inner-box .pic-3, main .banner-section .banner .inner-box .pic-4, main .banner-section .banner .inner-box .pic-5 {
   flex: 1;
   background-color: #ddd;
   color: #000;
   text-align: center;
   width: 100%;
   height: 100%;
+  border-bottom: wheat 5px dashed;
+}
+main .banner-section .banner .inner-box .pic-3 {
+  background: url("bg-imgs/banner-pic-3.png");
+  background-position: center;
+  background-size: cover;
+}
+main .banner-section .banner .inner-box .pic-4 {
+  background: url("bg-imgs/banner-pic-4.png");
+  background-position: center;
+  background-size: cover;
+}
+main .banner-section .banner .inner-box .pic-5 {
+  background: url("bg-imgs/banner-pic-5.png");
+  background-position: center;
+  background-size: cover;
 }
 main .spring-selction-section {
   display: flex;
