--- a/scss/main.scss
+++ b/scss/main.scss
@@ -518,6 +518,27 @@ main {
         font-weight: bold;
         color: white;
         text-transform: uppercase;
+
+        .desc {
+          width: 100%;
+          height: 100px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: #f5deb3b6;
+
+          h1 {
+            text-align: center;
+            color: black;
+            font-weight: 400;
+            font-size: 1.5rem;
+
+            span {
+              font-weight: bold;
+              margin: 0 10px;
+            }
+          }
+        }
       }
 
       // Updated Grid Assignments
@@ -525,30 +546,59 @@ main {
         grid-row: 1 / span 2; // Spans both rows
         grid-column: 1 / 2;   // First column
         background-color: #555;
+        background: url('bg-imgs/banner-pic-1.gif');
+        background-position: center;
+        background-size: cover;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
       }
 
       .pic-2 {
         grid-row: 1 / 2;      // First row
         grid-column: 2 / 4;  // Spans columns 2 and 3 (combined)
-        background-color: #777;
+        background: url('bg-imgs/banner-pic-2.png');
+        background-position: 70%;
+        background-size: cover;
+        
+        
       }
 
-      .pic-3 {
+      .space {
         display: none;        // Hidden (merged into pic-2)
       }
 
-      .pic-4 {
+      .inner-box {
         grid-row: 2 / 3;      // Second row
         grid-column: 2 / 4;   // Spans columns 2 and 3
         background-color: #bbb;
 
-        .inner-box {
+        .pic-3, .pic-4, .pic-5 {
           flex: 1;
           background-color: #ddd;
           color: #000;
           text-align: center;
           width: 100%;
           height: 100%;
+
+          border-bottom: wheat 5px dashed;
+        }
+
+        .pic-3 {
+          background: url('bg-imgs/banner-pic-3.png');
+          background-position: center;
+          background-size: cover;
+        }
+        .pic-4 {
+          background: url('bg-imgs/banner-pic-4.png');
+          background-position: center;
+          background-size: cover;
+        }
+        .pic-5 {
+          background: url('bg-imgs/banner-pic-5.png');
+          background-position: center;
+          background-size: cover;
         }
       }
     }
